Adding invoice list process

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 FLASK_APP=flaskr/app
 FLASK_ENV=local
 APP_NAME=abcall-payment-api
+DATABASE_URI=postgresql+psycopg2://develop:d3v3l0p@db:5432/payment-db
