--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   api:
     build:
@@ -18,11 +17,14 @@ services:
     depends_on:
       - db
   db:
-    image: postgres
+    build:
+      context: .
+      dockerfile: db.Dockerfile
     env_file:
       - .env.db
     container_name: payment-local-db
     volumes:
-      - "./data/postgres:/var/lib/postgresql"
+      - "./data/postgresql:/var/lib/postgresql"
+      - "./docker/postgresql:/docker-entrypoint-initdb.d"
     ports:
-      - "5433:5432"
+      - "5435:5432"
