--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ SQLAlchemy==1.4.40
 flask-sqlalchemy==3.0.5
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
+celery==5.3.4
+redis==5.0.0
+azure-servicebus==7.12.3
+kombu==5.4.2
