update schedule broker endopoint

--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,6 @@ FLASK_APP=flaskr/app
 FLASK_ENV=local
 APP_NAME=abcall-payment-api
 DATABASE_URI=postgresql+psycopg2://develop:d3v3l0p@db:5432/payment-db
-SCHEDULE_BROKER=azureservicebus://RootManageSharedAccessKey:iw0UNR8CwgQaMvtkekhh939mGrzP3KtTM+ASbL90INA=@abcall.servicebus.windows.net/
+SCHEDULE_BROKER=azureservicebus://RootManageSharedAccessKey:s7kJ3o2JIMa+Q4iYJe0w3i9lC/dfsRbAT+ASbMgdpoE=@abcall-broker.servicebus.windows.net/
 TOPIC_SCHEDULE=invoices-schedule
 MINUTES_TO_EXECUTE_INVOICES=1
