--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,5 @@ APP_NAME=abcall-payment-api
 DATABASE_URI=postgresql+psycopg2://develop:d3v3l0p@db:5432/payment-db
 SCHEDULE_BROKER=azureservicebus://RootManageSharedAccessKey:s7kJ3o2JIMa+Q4iYJe0w3i9lC/dfsRbAT+ASbMgdpoE=@abcall-broker.servicebus.windows.net/
 TOPIC_SCHEDULE=invoices-schedule
-MINUTES_TO_EXECUTE_INVOICES=1
+MINUTES_TO_EXECUTE_INVOICES=10
+URL_REPORTS_SERVICE=http://reports:3008/
