--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ APP_NAME=abcall-payment-api
 DATABASE_URI=
 SCHEDULE_BROKER=
 TOPIC_SCHEDULE=
+MINUTES_TO_EXECUTE_INVOICES=10
+URL_REPORTS_SERVICE=http://reports:3008/
