--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ SCHEDULE_BROKER=
 TOPIC_SCHEDULE=
 MINUTES_TO_EXECUTE_INVOICES=10
 URL_REPORTS_SERVICE=http://reports:3008/
+CUSTOMER_API_PATH=http://api-customer:3003
