--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,4 @@ SCHEDULE_BROKER=azureservicebus://RootManageSharedAccessKey:s7kJ3o2JIMa+Q4iYJe0w
 TOPIC_SCHEDULE=invoices-schedule
 MINUTES_TO_EXECUTE_INVOICES=10
 URL_REPORTS_SERVICE=http://reports:3008
+CUSTOMER_API_PATH=http://api-customer:3003
