--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ TOPIC_SCHEDULE=
 MINUTES_TO_EXECUTE_INVOICES=10
 URL_REPORTS_SERVICE=http://reports:3008/
 CUSTOMER_API_PATH=http://api-customer:3003
+ISSUE_API_PATH=http://api-issue:3007
