--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -62,3 +62,25 @@ jobs:
       env:
         MESSAGE_SUCCESS: All build were success
       run: echo "::set-output name=answer::${MESSAGE_SUCCESS}"
+
+  
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip 
+            pip install -r requirements.txt
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
