--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -79,8 +79,14 @@ jobs:
         run: |
             python -m pip install --upgrade pip 
             pip install -r requirements.txt
+      - name: pruebas+coverage
+        id: pruebas
+        run: |
+          python -m coverage run -m unittest discover -s tests -p '*Test.py' -v 
+          python -m coverage xml -i 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
