--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.organization=mttm774
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.coverage.exclusions=**tests/**,**src/vista/**,**docs/**,**setup.py**
