--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -82,8 +82,9 @@ jobs:
       - name: pruebas+coverage
         id: pruebas
         run: |
-          python -m coverage run -m unittest discover -s tests -p '*Test.py' -v
-          python -m coverage xml -i 
+          coverage run -m unittest discover -s tests -p '*Test.py' -v
+          coverage report -m
+          coverage xml -i
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
