--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,6 @@ sonar.organization=mttm774
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
+sonar.python.coverage.reportPaths=coverage.xml
+
 sonar.coverage.exclusions=**tests/**,**src/vista/**,**docs/**,**setup.py**
